Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1089. zkServer.sh status does not work due to invalid
  option of nc (Roman Shaposhnik via phunt)

  ZOOKEEPER-1345. Add a .gitignore file with general exclusions and
  Eclipse project files excluded (Harsh J via phunt)
 
  ZOOKEEPER-973. bind() could fail on Leader because it does not
  setReuseAddress on its ServerSocket (Harsh J via phunt)

Release 3.3.4 - 2011-11-16
Backward compatible changes:

BUGFIXES:
  ZOOKEEPER-1006. QuorumPeer "Address already in use" -- regression in 3.3.3 (phunt via breed)

  ZOOKEEPER-1087. ForceSync VM arguement not working when set to "no" (Nate Putnam via breed)

  ZOOKEEPER-1103. In QuorumTest, use the same "for ( .. try { break }
  catch { } )" pattern in testFollowersStartAfterLeaders as in
  testSessionMove. (Eugene Koontz via phunt)

  ZOOKEEPER-1097. Quota is not correctly rehydrated on snapshot reload (camille via henryr)

  ZOOKEEPER-1117. zookeeper 3.3.3 fails to build with gcc >= 4.6.1 on
  Debian/Ubuntu (James Page via mahadev)

  ZOOKEEPER-1154. Data inconsistency when the node(s) with the highest zxid is not present at the time of leader election. (Vishal Kathuria via camille)
  
  ZOOKEEPER-1156. Log truncation truncating log too much - can cause data loss. (Vishal Kathuria via camille)
 
  ZOOKEEPER-961. Watch recovery after disconnection when connection string contains a prefix. 
  (Matthias Spycher via mahadev)
  
  ZOOKEEPER-1160. test timeouts are too small (breed via camille)
 
  ZOOKEEPER-1189. For an invalid snapshot file(less than 10bytes size)
  RandomAccessFile stream is leaking. (Rakesh R via mahadev)

  ZOOKEEPER-1203. Zookeeper systest is missing Junit Classes
  (Prashant Gokhale via phunt)
 
  ZOOKEEPER-1206. Sequential node creation does not use always use
  digits in node name given certain Locales. (Mark Miller via phunt)
  
  ZOOKEEPER-1174. FD leak when network unreachable. (Ted Dunning via camille)
