@@ -12,6 +12,9 @@ BUGFIXES:
   ZOOKEEPER-973. bind() could fail on Leader because it does not
   setReuseAddress on its ServerSocket (Harsh J via phunt)
 
+  ZOOKEEPER-1367. Data inconsistencies and unexpired ephemeral nodes 
+  after cluster restart. (Benjamin Reed via mahadev)
+
 Release 3.3.4 - 2011-11-16
 Backward compatible changes:
 
